# nexo-messenger

./: .editorconfig  .eslintrc.cjs  .gitattributes  .replit  README.md  package-lock.json  package.json  replit.md
attached_assets/: Pasted--UPGRADE-PLAN-BEFORE-BUILD-ENTERPRISE-BLUEPRINT-Goal-Keep-the-same-product-NEXO-and-API-contr-1756456765799_1756456765800.txt  Pasted-NEXO-SUMMIT-BUILD-enterprise-dual-core-production-grade-Mission-Ship-NEXO-as-an-enterprise-me-1756457586220_1756457586221.txt  Pasted-ROLE-You-are-the-lead-DevOps-backend-engineer-for-this-repo-You-are-allowed-to-edit-overwrite-fil-1756464825046_1756464825047.txt  Pasted-TITLE-Build-NEXO-Privacy-by-default-messenger-with-auditable-transparency-from-empty-workspace-t-1756455831926_1756455831927.txt  Pasted-TITLE-NEXO-Reverse-First-Constraint-Aware-Self-Verifying-Build-ROLE-You-are-the-lead-full-stac-1756456154348_1756456154349.txt  Pasted-You-are-a-meticulous-senior-Rust-CI-engineer-working-in-the-repo-pussycat186-nexo-messenger-Bra-1756483784810_1756483784811.txt  Pasted-You-are-a-senior-CI-CD-DevOps-engineer-working-inside-this-repo-Work-ONLY-on-branch-fix-ci-ultra--1756482752346_1756482752347.txt  Pasted-You-are-a-senior-CI-CD-full-stack-fixer-agent-Work-on-repo-pussycat186-nexo-messenger-Goal-mak-1756466766908_1756466766909.txt  Pasted-You-are-a-senior-CI-fixer-Work-on-repo-pussycat186-nexo-messenger-using-a-new-branch-fix-ci-ultra--1756479470568_1756479470569.txt  Pasted-You-are-a-senior-DevOps-Release-Engineer-Repo-mono-repo-nexo-messenger-with-these-parts-se-1756463594525_1756463594526.txt  Pasted-You-are-a-senior-Rust-TypeScript-engineer-Make-CI-green-What-to-do-exact-steps-1-Mirror--1756465486961_1756465486962.txt  Pasted-You-are-a-senior-full-stack-CI-CD-fixer-Work-on-GitHub-repo-pussycat186-nexo-messenger-Objectiv-1756467857960_1756467857961.txt  (+3 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
server/core-rust/: Cargo.toml
server/core-rust/src/: cosign.rs  main.rs  merkle.rs  metrics.rs  routes.rs  storage.rs  ws.rs
server/core-rust/tests/: cosign_test.rs  merkle_test.rs
(+58 files in other folders)
