[package]
name = "nexo-desktop"
version = "1.0.0"
description = "NEXO Desktop - Privacy by Default Messenger"
authors = ["NEXO Team"]
license = "Apache-2.0"
repository = "https://github.com/nexo/nexo"
default-run = "nexo-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "nexo-desktop"
path = "src/main.rs"
